# hoogle_plus

./: .dockerignore  .gitignore  .gitmodules  .hindent.yaml  0001-add-NoGar-as-flag-and-relevant-support.patch  0002-remove-test-log.patch  201906110007.out  201906112016.out  Dockerfile  Dockerrun.aws.json  HOSTING.md  InternalIntGen.hs  InternalTypeGen.hs  LICENSE  Pair  README.md  Setup.hs  SynthesizeOurs.hs  SynthesizeTheirs.hs  blacklist.txt  blacklist_ecta.txt  build.gradle  build.sh  client_session_key.aes  collect_quality.py  docker-compose.sh  docker-compose.yaml  evaluation-short.sh  evaluation.sh  file1  file2  firstJust-new.z3  generate.sh  generate1.sh  generate1_1.sh  generate2.sh  generate3.sh  generate_test.sh  hie.yaml  ho.txt  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json
app/: HooglePlus.hs  Interpreter.hs  Main.hs
benchmark/: BConfig.hs  BOutput.hs  BPlot.hs  BTypes.hs  Benchmark.hs  Runner.hs
benchmark/strategy_test/: experiment.py  hplus.py  run.py  study.yml  util.py
benchmark/suites/: aec-short.yaml  aec-short.yml  allQueries.json  base.yml  classification.yaml  classification.yml  curated.json  ecta.yml  hktv.yml  hof.yml  impossible-queries.json  misc.yml  not-work.yaml  popl.yml  test.json  typeclass.yml  user-data.yml  user_data.yml  working.yml
compact-coupled-terms/: .gitignore  ChangeLog.md  README.md  compact-coupled-terms.cabal  package.yaml  stack.yaml
compact-coupled-terms/app/: Main.hs
compact-coupled-terms/benchmarks/: Benchmarks.hs  TestData.hs
compact-coupled-terms/scripts/: plot.py  plot_all.sh  run_tests.py
compact-coupled-terms/test/: CacheProfilingSpec.hs  ECTASpec.hs  PathsSpec.hs  SATSpec.hs
config/: blacklist.txt
data/: blacklist.txt  builtin.json  bytestring.txt  ho.txt  quality-map.csv
dependencies/: Dockerfile  README.md  python_requirements.txt
docker/: Dockerfile
graph_search/: stack.yaml  synquid.cabal
graph_search/src/: DatabaseTest.hs
hoogle_plus/src/: Synquid.hs
hplus-bench-utils/: ChangeLog.md  README.md  hplus-bench-utils.cabal  package.yaml  stack.yaml
hplus-bench-utils/app/: extractImports.hs  extractUsageExamples.hs
hplus-bench-utils/src/: AppUtils.hs  CsvUtils.hs  ImportUtils.hs  LibExtractUsageExamples.hs  MiscUtils.hs  TypeOf.hs
hplus_weights/: README.md
hplus_weights/src/: .download_hackage_tarballs.py.swp  .generate_working_files.py.swp  csv_producer.py  download_hackage_tarballs.py  generate_identifiers_maps.py  generate_weights.py  generate_working_files.py  import_producer.py  maps_producer.py
hplus_weights/supported_modules/: bytestring.api
libraries/: .#test20.txt  base.txt  base_ecta.txt  bytestring.txt  containers.txt  customPrelude.txt  deepseq.txt  firstJust.txt  ghc-prim.txt  test10.txt  test100.txt  test20.txt  test250.txt  test50.txt  testHOF1.txt  test_hktv.txt
libraries/tier1/: base.txt  bytestring.txt
logs/: 201906121435.out  201906131829.out  201906140901.out  201906140951.out  201906141011.out  201906141355.out  201906160244.out  201906161405.out  201906170102.out  201906171639.out  201906171935.out
ml_models/utils/: code_scanner.py
new_webapp/: .env.development  Dockerfile  README.md  package-lock.json  package.json  routes.yml
new_webapp/public/: index.html
new_webapp/src/: App.css  App.js  index.css  index.js
notes/: DemandTest.lhs
scripts/: 10.sh  100.sh  153-tier1-no-tuple.sh  153-tier1.sh  20.sh  50.sh  benchmark.py  collect_inference_eval.py  collect_quality.py  collect_tsvs.py  config.sh  curated.json  evaluation-short.sh  evaluation.sh  filtering.py  fordavid.json  generate_189.sh  generate_test.sh  icfp-tier2.sh  icfp.sh  inference.csv  inference.py  inference_graph.ipynb  inference_lines.csv  initialize.sh  parse_log.ipynb  parse_log.py  popl.py  quality.plot  queries.json  run.py  run_all.py  run_each_benchmark.py  run_popl.py  run_quality.py  run_query.py  runquery.sh  runsuite.py  synthesis.py  tolatex.py  (+1 more)
scripts/deprecated/: collect_quality.py  collect_tsvs.py  evaluation-short.sh  run_each_benchmark.py
scripts/old/: 10.sh  153-tier1-no-tuple.sh  153.sh  449.sh  50.sh  bounded.plot  generate_test.sh  quality.py  run_popl.py  runquery.sh  runsuite.py
scripts/queries/: curated-partial.json  curated-total.json  curated.json  hof-curated.json  queries.json
src/: DatabaseTest.hs  Synquid.hs  base.txt  test.txt
src/Abstract/: Cover.hs  Types.hs  Unification.hs
src/Compiler/: Error.hs  Parser.hs  Resolver.hs  Util.hs
src/Database/: Convert.hs  Dataset.hs  Dataset.template  Download.hs  Environment.hs  Generate.hs  Graph.hs  GraphWeightsProvider.hs  Haddock.hs  Prelude.hs  Presets.hs  Succinct.hs  Typeclasses.hs  Util.hs  Utils.hs  bytestring_after_1000_negativeLogProbs.json  hackage500_weights.json  reverseDe5_weights.json
src/Datalog/: DataTypes.hs  Datalog.hs  DatalogType.hs  Formulog.hs  FormulogType.hs  Souffle.hs  SouffleType.hs  Utils.hs
src/Dataset/: BottomUp.hs  Configuration.hs  Dataset.hs  Generation.hs  HyperGraph.hs
src/Encoder/: CBCEnc.hs  CBCTypes.hs  ConstraintEncoder.hs  DatalogEnc.hs  DatalogTypes.hs  EncoderTypes.hs  PrologEnc.hs  PrologTypes.hs  SouffleType.hs  Utils.hs  Z3SATEnc.hs  Z3SATTypes.hs  Z3SMTEnc.hs  Z3SMTTypes.hs
src/Evaluation/: Benchmark.hs  EvalTypeInf.hs  ReadBenchmark.hs
src/Examples/: .ExampleChecker.hs.swp  ExampleChecker.hs  InferenceDriver.hs  Utils.hs
src/Hectare/: TermSearch.hs  Type.hs  Utils.hs
src/HooglePlus/: Abstraction.hs  BiExplorer.hs  CodeFormer.hs  CodeGenerator.hs  Encoder.hs  FilterTest.hs  GHCChecker.hs  HyperExplorer.hs  IOFormat.hs  Refinement.hs  Stats.hs  Types.hs  (+4 more)
test/: Test.hs  test0.txt  test10.txt  test100.txt  test20.txt  test50.txt  testExample.txt  testHo.txt
tmp/: Temp.hs
top_down_testing/: resultsDepth  resultsDepth.tsv  resultsSize  resultsSize.tsv  resultsSize.txt  resultsSizeFixed  resultsSizeFixed.tsv  resultsTygus  resultsTygus.tsv
web_server/: dependencies.txt  start_server.sh  test.py  test.sh
webapp/: .gitignore  README.md  client_session_key.aes  load_balance_nginx.conf  package.yaml  routes  stack.yaml  temp-website2.cabal
(+354 files in other folders)
