name:                 hoogleplus
version:              0.1
synopsis:             Type Guided Abstraction Refinement Program Synthesis
description:          HooglePlus is a component based program synthesizer that uses type abstraction-refinement.
-- license:
-- license-file:         LICENSE
author:               Zheng Guo
maintainer:           zhg069@ucsd.edu
category:             Language
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.18

flag hoogleplus
  Description: Build the hoogleplus executable
  Default:     True

executable hoogleplus
  main-is:            Synquid.hs

  other-extensions:   TemplateHaskell
                    , Rank2Types
                    , FlexibleInstances
                    , TypeSynonymInstances
                    , FlexibleContexts
                    , CPP
  other-modules: Database.Convert
                 Database.Download
                 Database.Generate
                 Database.GraphWeightsProvider
                 Database.Util
                 PetriNet.PNSolver
                 PetriNet.AbstractType
                 PetriNet.PNBuilder
                 PetriNet.Encoder
                 PetriNet.PNEncoder
                 PetriNet.GHCChecker
                 PetriNet.Abstraction
                 HooglePlus.CodeFormer
                 HooglePlus.Encoder
                 Synquid.Codegen
                 Synquid.Error
                 Synquid.Explorer
                 Synquid.Graph
                 Synquid.GraphConstraintSolver
                 Synquid.HornSolver
                 Synquid.HtmlOutput
                 Synquid.Logic
                 Synquid.Parser
                 Synquid.Pretty
                 Synquid.Program
                 Synquid.Resolver
                 Synquid.SolverMonad
                 Synquid.Stats
                 Synquid.Succinct
                 Synquid.Synthesizer
                 Synquid.Tokens
                 Synquid.Type
                 Synquid.TypeChecker
                 Synquid.TypeConstraintSolver
                 Synquid.Util
                 Synquid.Z3
                 Z3.Base
                 Z3.Base.C
                 Z3.Monad
                 Z3.Opts

  build-depends:      base
                    , containers
                    , mtl
                    , transformers
                    , transformers-compat
                    , lens
                    , ansi-wl-pprint
                    , ansi-terminal
                    , html
                    , bimap
                    , logict
                    , parsec
                    , indents
                    , cmdargs
                    , filepath
                    , time
                    , haskell-src-exts
                    , safe
                    , split
                    , unordered-containers
                    , hashable
                    , pqueue
                    , conduit
                    , extra
                    , conduit-extra
                    , http-conduit
                    , resourcet
                    , aeson
                    , http-types
                    , bytestring
                    , split
                    , packdeps
                    , Cabal
                    , directory
                    , text
                    , sort
                    , cereal
                    , heap
                    , process
                    , regex-compat
                    , vector
                    , MissingH
                    , hint
                    , pretty-simple

  ghc-options:   -O2 -rtsopts
  includes:            z3.h

  if os(darwin) || os(windows)
      extra-libraries:     z3
  else
      extra-libraries:     gomp z3 gomp

  hs-source-dirs:     src
  default-language:   Haskell2010
  If !flag(hoogleplus)
    buildable: False
