name:                 synquid
version:              0.4
synopsis:             Program Synthesis from Refinement Types
description:          Synquid is a simple functional programming language with refinement types.
                      In Synquid the programmer must provide the type signature for each top-level function,
                      but can leave parts (or all) of the implementation out for the system to fill in.
-- license:
-- license-file:         LICENSE
author:               Nadia Polikarpova
maintainer:           nadia.polikarpova@gmail.com
category:             Language
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=2.0

Flag synquid
  Description: Build the synquid executable
  Default:     True

executable synquid
  main-is:         Synquid.hs
  hs-source-dirs:  src
  default-language:   Haskell2010
  other-extensions:   TemplateHaskell
                    , Rank2Types
                    , FlexibleInstances
                    , TypeSynonymInstances
                    , FlexibleContexts
  build-depends:      base >=4.10.0.0
                    , containers >=0.5 && <0.6
                    , mtl >=2.2 && <2.3
                    , transformers
                    , transformers-compat
                    , lens >=3.7
                    , ansi-wl-pprint >=0.6 && <0.7
                    , ansi-terminal >=0.6
                    , html ==1.*
                    , bimap >= 0.2
                    , z3 > 4.0
                    , logict >= 0.5
                    , parsec == 3.1.*
                    , indents == 0.5.*
                    , cmdargs ==0.10.*
                    , filepath
                    , time
                    , haskell-src-exts >= 1.20
                    , safe
                    , split
                    , unordered-containers
                    , hashable
                    , pqueue
                    , conduit
                    , extra
                    , conduit-extra
                    , http-conduit >= 1.3
                    , resourcet
                    , aeson
                    , http-types
                    , bytestring
                    , split
                    , packdeps
                    , Cabal
                    , directory
                    , text
                    , sort
                    , cereal
                    , hakyll
                    , tagsoup
                    , cpphs  
                    , haddock-api
                    , ghc
                    , haddock-library

  other-modules: Database.Convert
                 Database.Download
                 Database.Generate
                 Database.Graph
                 Database.GraphWeightsProvider
                 Database.Util
                 Database.Haddock
                 Synquid.Codegen
                 Synquid.Error
                 Synquid.Explorer
                 Synquid.Graph
                 Synquid.HornSolver
                 Synquid.HtmlOutput
                 Synquid.Logic
                 Synquid.Parser
                 Synquid.Pretty
                 Synquid.Program
                 Synquid.Resolver
                 Synquid.SolverMonad
                 Synquid.Stats
                 Synquid.Succinct
                 Synquid.Synthesizer
                 Synquid.Tokens
                 Synquid.Type
                 Synquid.TypeChecker
                 Synquid.TypeConstraintSolver
                 Synquid.Util
                 Synquid.Z3
  ghc-options: -O2