name:                 synquid
version:              0.4
synopsis:             Program Synthesis from Refinement Types
description:          Synquid is a simple functional programming language with refinement types.
                      In Synquid the programmer must provide the type signature for each top-level function,
                      but can leave parts (or all) of the implementation out for the system to fill in.
-- license:
-- license-file:         LICENSE
author:               Nadia Polikarpova
maintainer:           nadia.polikarpova@gmail.com
category:             Language
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

flag synquid
  Description: Build the synquid executable
  Default:     True

executable synquid
  main-is:            Synquid.hs

  other-extensions:   TemplateHaskell
                    , Rank2Types
                    , FlexibleInstances
                    , TypeSynonymInstances
                    , FlexibleContexts
                    , CPP

  build-depends:      base
                    , containers
                    , mtl
                    , transformers
                    , transformers-compat
                    , lens
                    , ansi-wl-pprint
                    , ansi-terminal
                    , html
                    , bimap
                    , logict
                    , parsec
                    , indents
                    , cmdargs
                    , filepath
                    , time
                    , haskell-src-exts
                    , safe
                    , split
                    , unordered-containers
                    , hashable
                    , pqueue
                    , conduit
                    , extra
                    , conduit-extra
                    , http-conduit
                    , resourcet
                    , aeson
                    , http-types
                    , bytestring
                    , split
                    , packdeps
                    , Cabal
                    , directory
                    , text
                    , sort
                    , cereal
                    , heap
                    , process
                    , regex-compat
                    , vector
                    , inline-java

  ghc-options:   -O2
  includes:            z3.h

  hs-source-dirs:     src
  default-language:   Haskell2010
  If !flag(synquid)
    buildable: False
