name:                 synquid
version:              0.4
synopsis:             Program Synthesis from Refinement Types
description:          Synquid is a simple functional programming language with refinement types.
                      In Synquid the programmer must provide the type signature for each top-level function,
                      but can leave parts (or all) of the implementation out for the system to fill in.
-- license:
-- license-file:         LICENSE
author:               Nadia Polikarpova
maintainer:           nadia.polikarpova@gmail.com
category:             Language
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

flag synquid
  Description: Build the synquid executable
  Default:     True

executable synquid
  main-is:            Synquid.hs

  other-extensions:   TemplateHaskell
                    , Rank2Types
                    , FlexibleInstances
                    , TypeSynonymInstances
                    , FlexibleContexts
                    , CPP
  other-modules: Database.Convert
                 Database.Download
                 Database.Generate
                 Database.Graph
                 Database.GraphWeightsProvider
                 Database.Util
                 PetriNet.PNSolver
                 PetriNet.PolyDispatcher
                 Synquid.Codegen
                 Synquid.Error
                 Synquid.Explorer
                 Synquid.Graph
                 Synquid.GraphConstraintSolver
                 Synquid.HornSolver
                 Synquid.HtmlOutput
                 Synquid.Logic
                 Synquid.Parser
                 Synquid.Pretty
                 Synquid.Program
                 Synquid.Resolver
                 Synquid.SolverMonad
                 Synquid.Stats
                 Synquid.Succinct
                 Synquid.Synthesizer
                 Synquid.Tokens
                 Synquid.Type
                 Synquid.TypeChecker
                 Synquid.TypeConstraintSolver
                 Synquid.Util
                 Synquid.Z3
                 Z3.Base
                 Z3.Base.C
                 Z3.Monad
                 Z3.Opts

  build-depends:      base
                    , containers
                    , mtl
                    , transformers
                    , transformers-compat
                    , lens
                    , ansi-wl-pprint
                    , ansi-terminal
                    , html
                    , bimap
                    , logict
                    , parsec
                    , indents
                    , cmdargs
                    , filepath
                    , time
                    , haskell-src-exts
                    , safe
                    , split
                    , unordered-containers
                    , hashable
                    , pqueue
                    , conduit
                    , extra
                    , conduit-extra
                    , http-conduit
                    , resourcet
                    , aeson
                    , http-types
                    , bytestring
                    , split
                    , packdeps
                    , Cabal
                    , directory
                    , text
                    , sort
                    , cereal
                    , heap
                    , process
                    , regex-compat
                    , vector
                    , inline-java
                    , jvm

  ghc-options:   -O2
  includes:            z3.h
  
  if os(darwin) || os(windows)
      extra-libraries:     z3
  else
      extra-libraries:     gomp z3 gomp

  hs-source-dirs:     src
  default-language:   Haskell2010
  If !flag(synquid)
    buildable: False
